--- a/2021-04-15/WindowsAzureInitializer/SettingsAndConfigurationFiles/SampleLoadFromSettingsFiles.cfg
+++ b/2021-04-15/WindowsAzureInitializer/SettingsAndConfigurationFiles/SampleLoadFromSettingsFiles.cfg
@@ -11,6 +11,6 @@ ComputationVmTemplate0.11-nsg
 # One or more virtual machine settings using the template. The number of virtual
 # machines to instantiate is derived from the number of entries below
 # BaseMachineName,VirtualMachineSize,DigitalContractIdentifier,DatasetFile
-ComputationVmTemplate0.11Image,Standard_B4ms,{347F3C11-B8EB-4132-84D2-D93EE3C5A448},Irdata_0.csvp
-ComputationVmTemplate0.11Image,Standard_B4ms,{B0341BF6-C578-4F2C-B852-D378163FC6E5},Irdata_all.csvp
-ComputationVmTemplate0.11Image,Standard_B4ms,{B9D4B0CF-CD57-47B3-B013-5FE718B8CD65},Irdata_0.csvp
+ComputationVmTemplate0.11Image,Standard_D32as_v4,{3F4FE094-AFEF-4492-AED7-65035CF402A1},Irdata_0.csvp
+ComputationVmTemplate0.11Image,Standard_D32as_v4,{F5BED77E-F875-4DF4-BC4B-34BFED521AAE},Irdata_all.csvp
+ComputationVmTemplate0.11Image,Standard_D32as_v4,{FA12AC35-0E22-4563-A19F-B6F5F48FBF40},Irdata_0.csvp
