Initializer binaries update

--- a/2021-05-13/WindowsAzureInitializer/SettingsAndConfigurationFiles/CvmSampleLoadFromSettingsFiles.cfg
+++ b/2021-05-13/WindowsAzureInitializer/SettingsAndConfigurationFiles/CvmSampleLoadFromSettingsFiles.cfg
@@ -17,8 +17,6 @@ https://newcon60195.blob.core.windows.net/vhds/vmgs.vhd
 # One or more virtual machine settings using the template. The number of virtual
 # machines to instantiate is derived from the number of entries below
 # BaseMachineName,VirtualMachineSize,DigitalContractIdentifier,DatasetFile
-Standard_DC1as_v4,{3FA58250-3B2D-4853-869A-3314FC675931},Telco.csvp
-Standard_DC1as_v4,{BE582368-8375-4BF6-BA9E-EA2BD7BD8311},Telco1.csvp
-Standard_DC1as_v4,{F4B6B656-F0F4-44D4-A98A-76A6F24B5CCC},Telco2.csvp
-Standard_DC1as_v4,{786B748C-8044-4A05-B3E4-A4B7ED28E4A3},Telco2.csvp
-Standard_DC1as_v4,{B2340FE5-CA85-47B5-AA43-CE01AAEB035A},Telco2.csvp
+Standard_DC1as_v4,{3FA58250-3B2D-4853-869A-3314FC675931},h1.csvp
+Standard_DC1as_v4,{BE582368-8375-4BF6-BA9E-EA2BD7BD8311},h2.csvp
+Standard_DC1as_v4,{F4B6B656-F0F4-44D4-A98A-76A6F24B5CCC},kca.csvp
