--- a/2021-05-13/WindowsAzureInitializer/SettingsAndConfigurationFiles/SampleLoadFromSettingsFiles.cfg
+++ b/2021-05-13/WindowsAzureInitializer/SettingsAndConfigurationFiles/SampleLoadFromSettingsFiles.cfg
@@ -15,3 +15,6 @@ eastus2
 # BaseMachineName,VirtualMachineSize,DigitalContractIdentifier,DatasetFile
 Standard_B4ms,{3FA58250-3B2D-4853-869A-3314FC675931},Telco.csvp
 Standard_B4ms,{BE582368-8375-4BF6-BA9E-EA2BD7BD8311},Telco1.csvp
+Standard_B4ms,{F4B6B656-F0F4-44D4-A98A-76A6F24B5CCC},Telco2.csvp
+Standard_B4ms,{786B748C-8044-4A05-B3E4-A4B7ED28E4A3},Telco2.csvp
+Standard_B4ms,{B2340FE5-CA85-47B5-AA43-CE01AAEB035A},Telco2.csvp
